# UrawaCup3

./: .editorconfig  .gitignore  SYSTEM_ARCHITECTURE.md  behavior_checklist.md  cleanup_git.py  code_analysis_report.md  create_sample_excel.py  day3_matches.csv  doc_orchestrator.py  doc_repo_agent.py  e2e-test-detailed-report.md  e2e-test-report.md  e2e-test.js  impl_repo_agent.py  orchestrator_main.py  refactoring_report.md  render.yaml  run_orchestrator.py  run_urawacup.py  sample_players.xlsx  sample_players_5teams_24each.csv  sample_players_市立浦和高校.csv  sample_players_武南高校.csv  sample_players_浦和南高校.csv  sample_players_浦和学院高校.csv  sample_players_浦和東高校.csv  sample_teams_24.csv  sample_teams_24_template.csv  state_orchestrator.py  test_core.py  urawacup.db  urawacup.docx  urawacup_requirements.md  user_test_checklist.md
UrawaCup/new/agent-UrawaCup/: README.md  UNCERTAINTY_GUARD.md  agent_check.py  agent_fix.py  agent_investigate.py  config.py  main.py  matches_output.json  pyproject.toml  run.py  run_issues.py  setup.bat  start.bat  start_mini.bat  test_sdk.py
UrawaCup/new/agent-UrawaCup/agents/: __init__.py  architecture_validator.py  auto_loop_agent.py  code_generator.py  issue_manager.py  requirement_analyzer.py  uncertainty_guard.py
UrawaCup/new/agent-UrawaCup/src/: app.py  models.py
UrawaCup/src/backend/: .env  .env.example  _check.py  alembic.ini  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  reset_admin.py  urawa_cup.db
UrawaCup/src/backend/models/: goal.py  group.py  match.py  player.py  report_recipient.py  team_uniform.py  tournament.py  tournament_award.py
UrawaCup/src/backend/routes/: exclusions.py  matches.py  players.py  reports.py  reports_excel.py  venues.py
UrawaCup/src/backend/schemas/: __init__.py  exclusion.py  match.py  player.py  report.py  team.py  user.py
UrawaCup/src/backend/scripts/: add_short_name_column.py  check_data.py  check_issues.py  create_admin.py  fix_venue.py  reset_admin_password.py  setup_exclusion_pairs.py  update_standings.py  update_venues.py
UrawaCup/src/backend/services/: player_import_service.py  report_service.py
UrawaCup/src/backend/templates/: players_import_template.csv
UrawaCup/src/backend/tests/: __init__.py  test_health.py
impl-repo/: README.md  changes.yaml  impl-log.md  impl_orchestrator.py  pyproject.toml  render.yaml  urawacup.db
impl-repo/src/: urawacup.db
impl-repo/src/backend/: __init__.py  config.py  database.py  main.py  requirements.txt  seed_data.py
impl-repo/src/frontend/: index.html  package-lock.json  package.json  vite.config.ts
impl-repo/tests/backend/: conftest.py  test_final_day.py  test_health.py  test_matches_api.py  test_standings.py
(+713 files in other folders)
