[project]
name = "urawacup"
version = "1.0.0"
description = "浦和カップ トーナメント管理システム"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Database
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",

    # Validation
    "pydantic>=2.5.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # File Processing
    "openpyxl>=3.1.2",
    "python-multipart>=0.0.6",

    # PDF Generation
    "reportlab>=4.0.8",

    # Excel Export
    "xlsxwriter>=3.1.9",

    # Utilities
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
